# oscar-noms

./: .gitignore  README.md  convert.py  get_nominations.py  prep-in.py  pyproject.toml  requirements.txt  requirements_dev.txt
